--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
-Package: RandomTaPas
+Package: Rtapas
 Title: Random Tanglegram Partitions
-Version: 0.1
+Version: 1.1
 Date: 2021-09-23
 Author: Juan Antonio Balbuena <j.a.balbuena@uv.es> ...
 Maintainer: The package maintainer <yourself@somewhere.net>
@@ -8,12 +8,11 @@ Description: Alexandrian approach to the co-phylogenetic gordian knot.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.2
 Depends: 
     phytools,
     parallelly,
     parallel,
-    R (>= 2.10)
+    R (>= 3.5.0)
 Imports:
     ape,
     distory,
@@ -21,7 +20,8 @@ Imports:
     paco,
     stats,
     vegan,
-    stringr,
+    stringr
+RoxygenNote: 7.1.2
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
