--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 export(assoc_mat)
 export(geo_D)
 export(gini_plot)
-export(incong_tangle)
 export(link_freq)
 export(linkf_CI)
 export(max_cong)
@@ -17,8 +16,7 @@ export(trimHS_maxC)
 export(trimHS_maxI)
 import(ape)
 import(distory)
-import(paco)
-import(parallelly)
+import(parallel)
 import(phytools)
 import(stats)
 import(stringr)
@@ -28,4 +26,7 @@ importFrom(graphics,arrows)
 importFrom(graphics,axis)
 importFrom(graphics,boxplot)
 importFrom(graphics,text)
+importFrom(parallel,parLapply)
+importFrom(parallel,stopCluster)
+importFrom(parallelly,makeClusterPSOCK)
 importFrom(vegan,procrustes)
