--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,15 @@ Package: Rtapas
 Title: Random Tanglegram Partitions
 Version: 1.1
 Date: 2021-09-23
-Author: Juan Antonio Balbuena <j.a.balbuena@uv.es> ...
+Authors@R: c(person("Mar", "Llaberia-Robledillo", role = c("aut", "cre", "cph"), email = "mar.llaberia@uv.es", comment = c(ORCID = "0000-0002-7989-796X")),
+  person("Juan A.", "Balbuena", role = c("aut", "cph"), email = "j.a.balbuena@uv.es", comment = c(ORCID = "0000-0003-4006-1353"))
+  )
 Maintainer: The package maintainer <yourself@somewhere.net>
-Description: Alexandrian approach to the co-phylogenetic gordian knot.
+Description: Applies a given global-fit method to random partial tanglegrams of a fixed size to 
+             identify the associations, terminals, and nodes that maximize phylogenetic 
+             (in)congruence. It also includes functions to compute more easily the confidence 
+             intervals of classification metrics and plot results, reducing computational time. 
+             See (..)
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -22,6 +28,7 @@ Imports:
     stringr,
     parallelly
 RoxygenNote: 7.1.2
+NeedsCompilation: no
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
